Closed Bug 86671 Opened 23 years ago Closed 23 years ago

UMR: nsDNSService::Init(void)

Categories

(Core :: Networking, defect, P2)

x86
Windows 2000
defect

Tracking

()

RESOLVED FIXED
mozilla0.9.2

People

(Reporter: hjtoi-bugzilla, Assigned: gordon)

References

Details

[W] UMR: Uninitialized memory read in nsDNSService::Init(void) {1
occurrence}
            Reading 4 bytes from 0x04a6d214 (4 bytes at 0x04a6d214 uninitialized)
            Address 0x04a6d214 is 100 bytes into a 152 byte block at 0x04a6d1b0
            Address 0x04a6d214 points to a C++ new block 
            Thread ID: 0x570
        Error location
            nsDNSService::Init(void) [nsDnsService.cpp:977]
                
                #if defined(XP_WIN)
                    // sync with DNS thread to allow it to create the DNS window
             =>     while (!mDNSWindow) {
                        status = PR_WaitCondVar(mDNSCondVar,
PR_INTERVAL_NO_TIMEOUT);
                        NS_ASSERTION(status == PR_SUCCESS, "PR_WaitCondVar
failed.");
                    }
            nsDNSService::Create(nsISupports *,nsID const&,void * *)
[nsDnsService.cpp:1090]
            nsGenericFactory::CreateInstance(nsISupports *,nsID const&,void * *)
[nsGenericFactory.cpp:55]
            nsComponentManagerImpl::CreateInstance(nsID const&,nsISupports
*,nsID const&,void * *) [nsComponentManager.cpp:1203]
            nsComponentManager::CreateInstance(nsID const&,nsISupports *,nsID
const&,void * *) [nsRepository.cpp:81]
            nsServiceManagerImpl::GetService(nsID const&,nsID const&,nsISupports
* *,nsIShutdownListener *) [nsServiceManager.cpp:344]
            nsServiceManager::GetService(nsID const&,nsID const&,nsISupports *
*,nsIShutdownListener *) [nsServiceManager.cpp:559]
            nsIOService::Init(void) [nsIOService.cpp:149]
            nsIOService::Create(nsISupports *,nsID const&,void * *)
[nsIOService.cpp:258]
            nsGenericFactory::CreateInstance(nsISupports *,nsID const&,void * *)
[nsGenericFactory.cpp:55]
        Allocation location
            new(UINT)      [new.cpp:23]
            nsDNSService::Create(nsISupports *,nsID const&,void * *)
[nsDnsService.cpp:1086]
                    if (aOuter != nsnull)
                        return NS_ERROR_NO_AGGREGATION;
                
             =>     nsDNSService* dnsService = new nsDNSService();
                    if (dnsService == nsnull)
                        return NS_ERROR_OUT_OF_MEMORY;
                    NS_ADDREF(dnsService);
            nsGenericFactory::CreateInstance(nsISupports *,nsID const&,void * *)
[nsGenericFactory.cpp:55]
            nsComponentManagerImpl::CreateInstance(nsID const&,nsISupports
*,nsID const&,void * *) [nsComponentManager.cpp:1203]
            nsComponentManager::CreateInstance(nsID const&,nsISupports *,nsID
const&,void * *) [nsRepository.cpp:81]
            nsServiceManagerImpl::GetService(nsID const&,nsID const&,nsISupports
* *,nsIShutdownListener *) [nsServiceManager.cpp:344]
            nsServiceManager::GetService(nsID const&,nsID const&,nsISupports *
*,nsIShutdownListener *) [nsServiceManager.cpp:559]
            nsIOService::Init(void) [nsIOService.cpp:149]
            nsIOService::Create(nsISupports *,nsID const&,void * *)
[nsIOService.cpp:258]
            nsGenericFactory::CreateInstance(nsISupports *,nsID const&,void * *)
[nsGenericFactory.cpp:55]
dns
Assignee: neeti → gordon
Status: NEW → ASSIGNED
Priority: -- → P3
Target Milestone: --- → mozilla0.9.2
Patch to initialize mDNSWindow on XP_WIN.  Neeti, can you give me an r=?

Index: mozilla/netwerk/dns/src/nsDnsService.cpp
===================================================================
RCS file: /cvsroot/mozilla/netwerk/dns/src/nsDnsService.cpp,v
retrieving revision 1.86
diff -u -2 -r1.86 nsDnsService.cpp
--- nsDnsService.cpp	2001/06/15 03:42:56	1.86
+++ nsDnsService.cpp	2001/06/19 19:51:12
@@ -875,4 +875,7 @@
     , mServiceRef(nsnull)
 #endif
+#if defined(XP_WIN)
+    , mDNSWindow(nsnull)
+#endif
 #ifdef DNS_TIMING
     , mCount(0)
Priority: P3 → P2
r=neeti
sr=darin
a= asa@mozilla.org for checkin to the trunk.
(on behalf of drivers)
Blocks: 83989
Fix checked in.
Status: ASSIGNED → RESOLVED
Closed: 23 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.