Fix bug 86671 by initializing mDNSWindow member variable for XP_WIN. r=neeti, sr=darin, a=asa.